[gd_scene load_steps=3 format=3 uid="uid://2am37hfmnkrp"]

[ext_resource type="Script" path="res://start_menu.gd" id="1_700d5"]
[ext_resource type="Theme" uid="uid://dvp5x6wrysorl" path="res://default.tres" id="1_c2rgv"]

[node name="StartMenu" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_c2rgv")
script = ExtResource("1_700d5")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="StartGameButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(64, 16)
layout_mode = 2
text = "Start Game"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(64, 16)
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="VBoxContainer/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
